--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Dev_Ops_Resume</title>
+		<title>Bryan_Pedraza_Resume</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,9 +20,12 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1> Bryan Pedraza ☁️</h1>
-								<p>With a robust background in data-driven analysis and strategic problem-solving, I am dedicated to optimizing business processes and enhancing cross-functional collaboration, driving impactful and scalable solutions that align with organizational goals.</p>
-							</div>
+								<h1> Bryan Pedraza 💻</h1>
+								<p>
+									<h5>Data Analyst | Business Intelligence | SQL | Power BI | Python | Excel</h5>
+									I’m a Senior Data & BI Analyst who helps companies understand their data and make better decisions through clear reporting, dashboards, and intelligence.
+								</p>
+							</div>	
 							<div class="counter-number nav-item nav-link text-white-50 font-os font-size-13
 							active">Views: </div>
 						</div>
@@ -42,72 +45,133 @@
 
 						<!-- Intro/Projects -->
 							<article id="intro">
-								<h2 class="major">☁️ Projects</h2>
-								<!--<span class="image main"><img src="images/pic01.jpg" alt="" /></span>-->
-								<h3>National Legislative Intelligence Tracker</h3>
-								<p>Designed a Python and SQL-based system that integrates with the LegiScan API to monitor U.S. state-level legislation impacting controlled products (e.g., Kratom, Delta). Delivered automated compliance summaries and alerts, enabling leadership to make rapid, law-informed business decisions—an approach applicable to mission-critical legal and regulatory monitoring.</p>
-								<h3>Strategic Risk Alert Dashboard</h3>
-								<p>Developed an automated Power BI reporting system to detect and visualize sales and inventory anomalies across nationwide retail accounts. Combined transactional data with business unit hierarchies to generate early warnings for market decline, supporting executive situational awareness and operational decision-making.</p>
-								<h3>Max Delivers ☁️</h3>
-								<p>● Engineered a legislation monitoring system using Python, SQL, and the LegiScan API to
-									 identify U.S. laws affecting restricted product sales (e.g., Kratom, Delta), aiding legal
-									 compliance and strategic planning.</p>
-								<p>● Developed automated Power BI and Python reporting tools to track sales risk, zero
-									 inventory, and underperforming products, enabling proactive sales interventions.</p>
-								<p>● Built executive dashboards to evaluate regional sales performance, business unit trends,
-									 and regulatory impacts, combining multiple datasets via complex SQL joins and
-									 Subqueries to deliver insights directly to C-level stakeholders.</p>	
-								<h3>QVC ☁️</h3>
-								<p>● Spearheaded the development of an advanced analytics framework using SQL and
-									 Python, optimizing data processing by 30% and enhancing predictive analytics capabilities
-									 for strategic decision-making.</p>
-								<p>● Designed and implemented dynamic dashboards and reports in Tableau and Power BI,
-									 providing real-time business insights that led to a 20% increase in operational efficiency
-									 across multiple departments.</p>
-								<p>● Developed a predictive model to forecast sales trends, which improved inventory
-									 management and reduced overstock by 25%</p>
-								<p>● Conducted comprehensive trend analysis and market research to identify emerging
-									 opportunities, contributing to a 15% revenue increase by influencing product
-									 development and marketing strategies.</p>
-								<h3>DSV ☁️</h3>
-								<p>● Analyze large datasets using SQL, Python to identify trends, patterns and insights.</p>
-                                <p>● Automate data cleaning and preprocessing tasks, reducing manual workload by 30%</p>
-                                <p>● Conduct A/B testing to optimize website performance and user experience resulting in a 15% increase in conversion rates.</p>
-                                <p>● Collaborate with cross-functional teams to define project requirements and deliver actionable recommendations.</p>
-                                <p>● Create interactive dashboards and reports using Tableau for stakeholders to visualize key metrics.</p>
+								<h2 class="major">Projects 📊📈</h2>
+								<!--Project 1--><!-- Projects / Portfolio -->
+										<p>
+											Here are some of the dashboards and reporting tools I’ve built. 
+											These examples show the type of work I do: creating clear, easy-to-understand 
+											reports that help teams make informed decisions.
+										</p>
 
+										<!-- Project 1 -->
+										<section class="project">
+											<h3>Power BI Dashboard #1 (Coming Soon)</h3>
+											<p><em>Dashboard link will be added here.</em></p>
+											<!-- Placeholder for Power BI iframe -->
+											<div class="dashboard-placeholder" style="background:#222; height:250px; border-radius:6px; margin-bottom:15px; display:flex; align-items:center; justify-content:center; color:#666;">
+												Power BI Embed Placeholder
+											</div>
+											<p class="description">
+												Short description of the dashboard will go here. This section will explain 
+												what the dashboard shows and how it helps with decision-making.
+											</p>
+											<!-- Placeholder for an image -->
+											<div class="image-placeholder" style="background:#333; height:160px; border-radius:6px; margin-bottom:25px; display:flex; align-items:center; justify-content:center; color:#666;">
+												Image Preview Placeholder
+											</div>
+										</section>
+
+										<!-- Project 2 -->
+										<section class="project">
+											<h3>Power BI Dashboard #2 (Coming Soon)</h3>
+											<p><em>Dashboard link will be added here.</em></p>
+											<div class="dashboard-placeholder" style="background:#222; height:250px; border-radius:6px; margin-bottom:15px; display:flex; align-items:center; justify-content:center; color:#666;">
+												Power BI Embed Placeholder
+											</div>
+											<p class="description">
+												Description for second dashboard. This will highlight the insights, purpose, 
+												and value of the report once it is live.
+											</p>
+											<div class="image-placeholder" style="background:#333; height:160px; border-radius:6px; margin-bottom:25px; display:flex; align-items:center; justify-content:center; color:#666;">
+												Image Preview Placeholder
+											</div>
+										</section>
+
+										<!-- Project 3 -->
+										<section class="project">
+											<h3>Power BI Dashboard #3 (Coming Soon)</h3>
+											<p><em>Dashboard link will be added here.</em></p>
+											<div class="dashboard-placeholder" style="background:#222; height:250px; border-radius:6px; margin-bottom:15px; display:flex; align-items:center; justify-content:center; color:#666;">
+												Power BI Embed Placeholder
+											</div>
+											<p class="description">
+												Future description for third dashboard. This can be a forecasting model, 
+												sales performance report, or any interactive analytics tool you want to showcase.
+											</p>
+											<div class="image-placeholder" style="background:#333; height:160px; border-radius:6px; margin-bottom:25px; display:flex; align-items:center; justify-content:center; color:#666;">
+												Image Preview Placeholder
+											</div>
+										</section>
 								<!--GitHub to my repository and show more of my projects-->
 								<p> <a href="https://github.com/Pedraza57">github.com/Pedraza57</a>.</p>
 							</article>
 
 						<!-- Work/experience -->
 							<article id="work">
-								<h2 class="major">Experience</h2>
-								<!--<span class="image main"><img src="images/pic02.jpg" alt="" /></span>-->
-								<h3>Business Intelligence Analyst| Max Delivers | Remote CA <p>01/2025 - Present</p></h3>
-								<p>● Conduct advanced data analysis to support operational strategy, regulatory compliance, and product risk intelligence. Designed and deployed automated systems to track legislative changes affecting controlled products across U.S. states using Python, SQL, and API integrations. Deliver executive-level dashboards and reports that enhance decision-making, monitor national sales trends, and identify potential legal and market exposure.</p>
-								
-								<h3>Senior Analyst | QVC | Hybrid CA <p>12/2022 - 01/2025</p></h3>
-								<p>● Led data-driven initiatives to inform executive strategy and optimize business operations across multiple departments. Developed performance dashboards, conducted deep market trend analyses, and managed high-impact analytical projects to identify growth opportunities and operational risks. Ensured data integrity and translated complex datasets into clear, actionable intelligence for stakeholders. Collaborated across teams to improve reporting methodologies, streamline data workflows, and integrate evolving analytical tools for enhanced insight generation.</p>
+    <h2 class="major">Experience</h2>
 
-								<h3>Data Analyst | DSV | Fontana CA <p>03/2020 - 12/2022</p></h3>
-								<p>● Extracted and analyzed large-scale operational data to support strategic planning and performance optimization. Produced detailed reports and visualizations to communicate key findings to leadership, facilitating data-driven decisions. Partnered with cross-functional teams to identify root causes of business challenges and implement solutions that enhanced process efficiency and organizational effectiveness.</p>
-							</article>
+    <h3>Business Intelligence Analyst | Max Distribution</h3>
+    <p>01/2025 – Present</p>
+    <p>
+        Support company-wide decision-making by creating clear, easy-to-understand dashboards and reports.
+        Work with sales, operations, and leadership to track performance, identify trends, and improve 
+        business processes. Help the organization stay informed on product activity, customer behavior, 
+        and overall performance.
+    </p>
+
+    <h3>Senior Analyst | QVC </h3>
+    <p>12/2022 – 01/2025</p>
+    <p>
+        Provided analytical insights to support merchandising, planning, and leadership teams. Simplified 
+        complex data into reports and visuals that improved forecasting, identified sales opportunities, 
+        and supported day-to-day business decisions. Helped streamline reporting processes and improve 
+        operational efficiency across multiple departments.
+    </p>
+
+    <h3>Data Analyst | DSV </h3>
+    <p>03/2020 – 12/2022</p>
+    <p>
+        Analyzed operational and customer data to help improve workflow, productivity, and performance. 
+        Created reports for managers, highlighted key trends, and supported business planning by providing 
+        timely and accurate insights. Worked with cross-functional teams to solve problems using data.
+    </p>
+</article>
+
 
 						<!-- About/skills -->
 							<article id="about">
-								<h2 class="major">Skills</h2>
 								<!--<span class="image main"><img src="images/pic03.jpg" alt="" /></span>-->
-								<p>● Python ● SQL ● Advance Excel ● Power BI  ● AWS web services ● Data Visualizations ● Communication</p> 
+								<p>
+									<h2 class="major">Skills</h2>
+								<p>
+								• Data Analysis  
+								• Reporting & Dashboards  
+								• Power BI  
+								• SQL  
+								• Python  
+								• Excel  
+								• KPI Tracking  
+								• Business Insights  
+								• Data Visualization  
+								• Data Modeling
+								• Problem Solving  
+								• Cross-Functional Communication
+								</p>
+								</p> 
 								<h2 class="major">Education</h2>
-								<h3>● MS Data Analytics (Expected 2026) - Capella University</h3> 
-								<h3>● B.S. in Business Administration - Capella University gpa 3.8</h3>                                                   
-								<b>AWS Academy</b>
-								<p>● Cloud Computing <a href="https://www.credly.com/badges/e0e9821f-13c7-46fb-a718-6af5751bda0d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
-								<p>● Cloud Architecting<a href="https://www.credly.com/badges/084eaf0c-021c-4d2d-81ab-fc7a823b03c0/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
-								<p>● Cloud Developing <a href="https://www.credly.com/badges/b240b513-8769-4dc4-b9e0-a867a34f0c6d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
-								<p>● Cloud Operations <a href=""   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
-								
+
+										<p><strong>MS in Data Analytics (Expected 2026)</strong><br>
+										Capella University</p>
+
+										<p><strong>BS in Business Administration</strong><br>
+										Capella University</p>
+
+										<p><strong>AWS Academy</strong><br>
+										Cloud Computing <a href="https://www.credly.com/badges/e0e9821f-13c7-46fb-a718-6af5751bda0d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a>. |
+										Cloud Architecting <a href="https://www.credly.com/badges/084eaf0c-021c-4d2d-81ab-fc7a823b03c0/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a>. |
+										Cloud Developing <a href="https://www.credly.com/badges/b240b513-8769-4dc4-b9e0-a867a34f0c6d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a>. |
+										Cloud Operations <a href=""   class="icon brands fa-aws"><span class="label">aws</span></a>.
+									</p>
 							</article>
 
 						<!-- Contact/Me -->
